# MedArc

./: .gitignore  CLAUDE.md  FEATURES.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.bg-shell/: manifest.json
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  STATE.md  completed-units.json
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning copy/: REQUIREMENTS.md
.planning copy/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: RELEASE.md
requirments/: Day0.md
src/: App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: device_id.rs  error.rs  keychain.rs  lib.rs
src-tauri/src/audit/: entry.rs  mod.rs  query.rs
src-tauri/src/auth/: biometric.rs  mod.rs  password.rs  session.rs  totp.rs
src-tauri/src/commands/: ai_documentation.rs  analytics.rs  assistant.rs  audio_capture.rs  audit.rs  auth.rs  auth_tracking.rs  backup.rs  billing.rs  break_glass.rs  calendar_events.rs  claims.rs  clinical.rs  document_center.rs  documentation.rs  era_processing.rs  fax_integration.rs  fhir.rs  health.rs  hep.rs  labs.rs  llm_integration.rs  mfa.rs  mips_reporting.rs  mod.rs  objective_measures.rs  patient.rs  pdf_export.rs  pt_notes.rs  reminders.rs  scheduling.rs  session.rs  therapy_cap.rs  transcription.rs  workers_comp.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/db/models/: fhir.rs  mod.rs  user.rs
src-tauri/src/rbac/: field_filter.rs  middleware.rs  mod.rs  roles.rs
src/components/: AuditLog.tsx  DatabaseStatus.tsx  FhirExplorer.tsx
src/contexts/: RouterContext.tsx
src/hooks/: useAuth.ts  useClinicalData.ts  useDictation.ts  useEncounter.ts  useIdleTimer.ts  usePatient.ts  usePatientNames.ts  useSchedule.ts
src/lib/: fhirExtract.ts  surveyStore.ts  tauri.ts
src/pages/: AnalyticsDashboardPage.tsx  AuditLogPage.tsx  BillingPage.tsx  ClaimsPage.tsx  DocumentCenterPage.tsx  EncounterWorkspace.tsx  ExportPage.tsx  FaxPage.tsx  HEPBuilderPage.tsx  MIPSDashboardPage.tsx  ObjectiveMeasuresPage.tsx  PTNotesPage.tsx  (+10 more)
(+269 files in other folders)
