[package]
name = "medarc"
version = "0.1.0"
description = "AI-Powered Desktop EMR"
authors = ["MedArc"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher", "serde_json"] }
rusqlite_migration = "1"
getrandom = "0.2"
hex = "0.4"
password-auth = { version = "1", features = ["argon2"] }
rand = "0.8"
