[package]
name = "medarc"
version = "0.1.0"
description = "AI-Powered Desktop EMR"
authors = ["MedArc"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher", "serde_json"] }
rusqlite_migration = "1"
getrandom = "0.2"
hex = "0.4"
password-auth = { version = "1", features = ["argon2"] }
rand = "0.8"
totp-rs = { version = "5", features = ["qr", "otpauth", "gen_secret", "serde_support"] }
sha2 = "0.10"
machine-uid = "0.5"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-local-authentication = { version = "0.3.2", features = ["LAContext", "block2"] }
objc2 = { version = "0.6.4", features = ["std"] }
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSError"] }
block2 = { version = "0.6.2", features = ["alloc"] }
